-fix date -alignment content -adding sidebar -creation of two blocks

--- a/Styles.css
+++ b/Styles.css
@@ -2,50 +2,44 @@
 
 html {
     font-family: 'Lilita One', cursive;
-    /*font-family: 'Roboto Condensed', sans-serif;*/
-
-}
-@media screen and (max-width: 1024px){
-
-}
+    /*font-family: 'Roboto Condensed', sans-serif;*/}
 
 body{
     margin:0;
-    padding:0;
-}
+    padding:0;}
+
 .navBar img{
-    height: 15px;
-}
+    height: 15px;}
+
 header {
     height: 1.2em;
     background: #F2F2F2;
     border-bottom: 1px solid #ccc;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     display: flex;
-    align-items: center;
-}
-
-
+    align-items: center;}
 
 .top{
     font-family: sans-serif;
     font-size: 14px;
 
 }
+
+
 .top ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    margin: 0;
-}
+    margin: 0;}
+
 .top a{
     margin: 10px;
     padding: 10px;
-    text-decoration: none;
-}
+    text-decoration: none;}
+
 .first{
-    color:black;
-}
+    color:black;}
+
 .else{
     color: rgba(46, 179, 185, 0.93);
 }
@@ -67,12 +61,9 @@ header {
     box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     vertical-align: middle;
     justify-content: center;
-    /*margin-right: 10em;*/
-    /*margin-left: 10em;*/
 }
-
 .navBar{
-    margin: 0 auto;
+    padding-left: 2em;
     display: flex;
     flex-direction: row;
 }
@@ -84,25 +75,20 @@ header {
     font-family:'Titillium Web', sans-serif;
     font-size: 14px;
 }
-
 .logotype{
     align-items: stretch;
-    flex-grow: 1;
-}
+    flex-grow: 1;}
 
 div.block{
     align-items: flex-end;
-    padding-right: 1em;
+    padding-right: 3em;
     display: flex;
-    flex-direction: row;
-}
+    flex-direction: row;}
 
 #logo{
     color: black;
     font-size:3em;
     font-weight: bolder;
-    /*margin: auto;*/
-
 }
 .icon{
     margin: 10px;
@@ -125,45 +111,75 @@ input {
     border:1px solid dimgray;
 }
 .more_content{
-    /*display: block;*/
-    margin-top: 1em;
+    margin-left: 2em;
 }
 .crumbs {
     display:flex;
     flex-direction:row;
     list-style:none;
-
+    padding: 0;
 }
+
 .crumbs a{
     text-decoration: none;
     margin: 10px;
     padding: 10px;
     color: dimgray;
-    font-family:'Titillium Web', sans-serif;
-}
+    font-family:'Titillium Web', sans-serif;}
+
 .picture{
     height: min-content;
 }
 .posts{
     display:flex;
     flex-direction:row;
-    margin: 10px;
-    padding: 10px;
-    height: 2em;
-
-  }
+    height: 2em;}
 
 .posts img{
     border-radius: 0.3em;
-    max-height: 2em;
-    max-width: 2vm;
-    overflow: hidden;
-
+    height: 2em;
+    width: 2em;
+    object-fit: cover;
 }
 
 .posts p{
-    margin: 10px;
+    margin: 0;
     padding: 10px;
     font-family:'Titillium Web', sans-serif;
     font-size:12px;
 }
+
+div.more_content{
+    width: 70%;
+    padding: 1em 1.5em;
+    }
+p.text {
+    width: 70%;
+}
+p.text_2 {
+    width: 70%;
+}
+aside{
+    width: 30%;
+    padding: 1.5em;
+    background-color: #ababab;
+    position: fixed;
+    right: 4em;
+    top: 100px;
+}
+aside img{
+    width: 20px;
+    margin: 1em;
+    justify-content: center;
+
+}
+aside h1{
+    font-size: 16px;
+    text-transform:uppercase;
+}
+aside h2{
+    font-size: 14px;
+    padding-top: 1em;
+    border-top: 1px solid black;
+}
+
